created hasClicked state for dontShowButton

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -17,7 +17,7 @@
 }
 
 .modal {
-  width: 500px;
+  width: 60%;
   position: relative;
   margin: 0px auto;
   padding: 20px;
@@ -28,21 +28,29 @@
   box-shadow: 0 2px 8px 3px;
   font-family: Helvetica, Arial, sans-serif;
 }
-
-.closeButton {
-  position: absolute;
-  right: -1rem;
-  top: -1rem;
-  width: 2rem;
-  height: 2rem;
-  padding: 0.5rem;
-  margin: 0 auto;
-  border-radius: 50%;
-  box-shadow: 1px 1px 1px #0000003a;
-  cursor: pointer;
-  border: 1px solid rgba(0, 0, 0, 0.562);
-}
-
-.dontShowButton {
-  background-color: pink;
+.popUp {
+  // &__paragraph {
+  //   display: flex;
+  //   justify-content: center;
+  //   align-items: center;
+  // }
+  &__closeButton {
+    position: absolute;
+    right: -1rem;
+    top: -1rem;
+    width: 2rem;
+    height: 2rem;
+    padding: 0.5rem;
+    margin: 0 auto;
+    border-radius: 50%;
+    box-shadow: 1px 1px 1px #0000003a;
+    cursor: pointer;
+    border: 1px solid rgba(0, 0, 0, 0.562);
+  }
+  &__dontShowButton {
+    background-color: pink;
+    width: 90%;
+    position: relative;
+    bottom: 50px;
+  }
 }
