--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,1 +1,5 @@
-//
+$primary-colour: #109e48;
+$secondary-colour: #ffe07d;
+$tertiary-colour: #000000;
+$warning-colour: orange;
+$danger-colour: red;
