--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,10 @@
   max-width: 1000px;
   padding: 1rem;
 }
+.helpButton {
+  border: none;
+  font-size: 30px;
+  position: absolute;
+  right: 10px;
+  top: 0;
+}
