--- a/src/App.scss
+++ b/src/App.scss
@@ -1,39 +1,82 @@
+
+* {
+  // font-family: "brandon-grot-w01-light", "san-serif"; // for titles?
+  font-family: 'Montserrat', sans-serif;
+}
+
 .container {
-  // width: 500px;
-  // height: 650px;
-  // border: 1px solid black;
-  // margin: 60px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  // background-image: url("https://openmaptiles.org/img/home-banner-map.png");
 
   .core-buttons {
     display: flex;
     justify-content: space-evenly;
 
     &__left {
-      // min-height: 200px;
-      // min-width: 380px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 30px;
       border-radius: 10px;
       background-color: yellow;
       color: white;
-      -webkit-text-stroke: 1px black;
+      min-width: 126px;
+      max-width: 126px;
+      max-height: 122px;
+      text-align: center;
+      font-weight: 900;
+      font-size: 24px;
+      -webkit-text-stroke: 0.2px black;
+      box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.705);
+      cursor: pointer;
+      border: none;
+
+      &:hover {
+        background-color: rgb(255, 255, 147);
+      }
     }
 
     &__right {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 30px;
+      max-height: 122px;
+      min-width: 240px;
+      max-width: 240px;
       border-radius: 10px;
       background-color: green;
+      font-weight: 900;
+      text-align: center;
+      -webkit-text-stroke: 1px white;
+      font-size: 24px;
       color: white;
+      box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.705);
+      cursor: pointer;
+      border: none;
+
+      &:hover {
+        background-color: rgb(2, 236, 2);
+      }
     }
   }
 
   img {
-    height: 500px;
-    width: 500px;
+    height: 560px;
+    width: 100%;
+    border-radius: 14px;
+    object-fit: cover;
   }
 
   .preview-image {
-    height: 300px;
-    width: 300px;
+    height: 360px;
+    width: 360px;
+    border-radius: 16px;
   }
 }
 
@@ -45,4 +88,8 @@
   &:hover {
     background-color: greenyellow;
   }
+}
+
+.hidden {
+  display: none !important;
 }
