--- a/src/containers/Details/Details.scss
+++ b/src/containers/Details/Details.scss
@@ -1,16 +1,32 @@
 .form {
   display: flex;
   flex-direction: column;
+  padding: 10px;
+  margin: 20px;
+  border-radius: 20px;
+  background-color: #cdefd1;
+
+  & > * {
+    margin: 10px;
+  }
 
   &__input--name {
     border-radius: 10px;
     padding: 10px;
+    border: none;
   }
 
-  &__input {
-    border-radius: 10px;
-    padding: 10px;
-    width: 160px;
+  &__middle {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+
+    &__input {
+      border-radius: 10px;
+      padding: 10px;
+      width: 120px;
+      border: none;
+    }
   }
 
   &__input--comments {
@@ -20,5 +36,6 @@
     word-wrap: break-word;
     word-break: break-word;
     resize: none;
+    border: none;
   }
 }
