--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -6,19 +6,24 @@
   display: none;
 }
 
-.modal {
-  width: 60%;
-  position: relative;
-  margin: 0px auto;
-  padding: 20px;
-  background-color: #fff;
-  border-radius: 2px;
-  transform: translateY(100%);
-  transition: transform 0.2s ease;
-  box-shadow: 0 2px 8px 3px;
-  font-family: Helvetica, Arial, sans-serif;
-}
 .popUp {
+  font-weight: 900;
+  // -webkit-text-stroke: 1px white;
+  font-size: 24px;
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.705);
+  &__modal {
+    width: 60%;
+    position: relative;
+    margin: 0px auto;
+    padding: 20px;
+    background-color: #fff;
+
+    // transform: translateY(100%);
+    transition: transform 0.2s ease;
+    box-shadow: 0 2px 8px 3px;
+    padding: 30px;
+    border-radius: 10px;
+  }
   // &__paragraph {
   //   display: flex;
   //   justify-content: center;
@@ -38,9 +43,13 @@
     border: 1px solid rgba(0, 0, 0, 0.562);
   }
   &__dontShowButton {
-    background-color: pink;
+    background: Green;
+    color: white;
     width: 90%;
-    position: relative;
-    bottom: 50px;
+    // position: relative;
+  }
+  &__container {
+    display: flex;
+    flex-direction: column;
   }
 }
