update styles for landing page

--- a/src/containers/Landing/Landing.scss
+++ b/src/containers/Landing/Landing.scss
@@ -1,13 +1,16 @@
+@use "../../assets/styles/buttons" as *;
+
 .container {
   .landing-container {
+    // border: 10px solid red;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 160px;
     .logo {
-      height: 200px;
-      width: 200px;
+      height: 130px;
+      width: 130px;
     }
     h1 {
       font-size: 40px;
@@ -16,6 +19,12 @@
     h3 {
       width: 70%;
       text-align: center;
+    }
+
+    .btn-primary {
+      max-height: 66px;
+      min-width: 130px;
+      max-width: 130px;
     }
   }
 }
