make landing page responsive

--- a/src/containers/Landing/Landing.scss
+++ b/src/containers/Landing/Landing.scss
@@ -26,5 +26,11 @@
       min-width: 130px;
       max-width: 130px;
     }
+
+    @media screen and (min-width: 375px) {
+      .logo {
+        margin-top: 100px;
+      }
+    }
   }
 }
