--- a/src/Components/Socials/styles.css
+++ b/src/Components/Socials/styles.css
@@ -1,4 +1,4 @@
-.socialContainer {
+.social__Container {
   height: 5%;
   width: 55px;
   position: absolute;
@@ -8,7 +8,7 @@
   z-index: 999;
 }
 
-.socialIcons a {
+.socials__Container-Icons a {
   color: black;
   font-size: 30px;
 }
