update Modal css

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -9,11 +9,11 @@
 .popUp {
   font-weight: 900;
   // -webkit-text-stroke: 1px white;
-  font-size: 24px;
+  font-size: 12px;
   box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.705);
   &__modal {
     width: 60%;
-    position: relative;
+    position: absolute;
     margin: 0px auto;
     padding: 20px;
     background-color: #fff;
@@ -23,6 +23,11 @@
     box-shadow: 0 2px 8px 3px;
     padding: 30px;
     border-radius: 10px;
+
+    height: 400px;
+    z-index: 999;
+    left: 20%;
+    top: 20%;
   }
   // &__paragraph {
   //   display: flex;
@@ -46,10 +51,15 @@
     background: Green;
     color: white;
     width: 90%;
+    height: auto;
+    width: auto;
+    position: absolute;
     // position: relative;
+    top: 50%;
   }
   &__container {
     display: flex;
     flex-direction: column;
+    // justify-content: center;
   }
 }
