--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -1,4 +1,14 @@
-.leaflet-container {
-    width: 100vw;
-    height: 100vh;
+.map-container {
+  margin: 20px;
+  // width: fit-content;
+  // height: 0.5vh;
+  // position: absolute;
+  width: auto;
+  height: auto;
+  margin-top: 20px;
+
+  .leaflet-container {
+    width: 80vw;
+    height: 120vh;
+  }
 }
