--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -8,7 +8,9 @@
   margin-top: 20px;
 
   .leaflet-container {
-    width: 80vw;
-    height: 120vh;
+    border-radius: 20px;
+    width: 95vw;
+    height: 90vh;
+    margin-top: 60px;
   }
 }
