--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -1,4 +1,20 @@
 .leaflet-container {
-    width: 100vw;
-    height: 100vh;
+  width: 100vw;
+  height: 100vh;
+}
+
+.leaflet-popup-content {
+  height: 221px;
+}
+
+.leaflet-popup-content button {
+  width: 90%;
+  height: 10%;
+  background-color: green;
+  color: white;
+  border-radius: 10px;
+}
+.leaflet-popup-content img {
+  width: 90%;
+  height: 90%;
 }
