--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -5,9 +5,9 @@
   justify-content: center;
   align-items: center;
   padding: 30px;
-  max-height: 122px;
-  min-width: 230px;
-  max-width: 230px;
+  // max-height: 122px;
+  // min-width: 230px;
+  // max-width: 230px;
   border-radius: 10px;
   background-color: $primary-colour;
   font-weight: 900;
