--- a/src/containers/Details/Details.scss
+++ b/src/containers/Details/Details.scss
@@ -39,3 +39,13 @@
     border: none;
   }
 }
+
+.core-buttons {
+  .btn-primary {
+    // max-width: 10px;
+    // max-height: 120px;
+    max-width: 200px;
+    height: 67px;
+    margin-left: 20px;
+  }
+}
