--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -6,6 +6,14 @@
   border-radius: 20px;
   background-color: #cdefd1;
 
+  @media (max-width: 767px) {
+    border: 2px solid red;
+  }
+  @media (max-width: 400px) {
+    border: 2px solid blue;
+    width: 220px;
+  }
+
   & > * {
     margin: 2px;
     border-radius: 10px;
@@ -25,5 +33,11 @@
     border-radius: 10px;
     padding: 10px;
     border: none;
+  }
+}
+
+.core-buttons__left {
+  @media (max-width: 400px) {
+    color: red;
   }
 }
