--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -1,22 +1,20 @@
 @use "variables" as *;
 
+$button-height: 70px;
+$button-font-size: 22px;
+$button-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+
 .btn-primary {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-  // max-height: 122px;
-  // min-width: 230px;
-  // max-width: 230px;
-  border-radius: 10px;
-  background-color: $primary-colour;
-  font-weight: 900;
+  background: $primary-colour;
+  min-width: 150px;
+  min-height: $button-height;
   text-align: center;
-  -webkit-text-stroke: 1px white;
-  font-size: 24px;
   color: white;
-  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.705);
-  cursor: pointer;
+  font-size: $button-font-size;
+  font-weight: bold;
+  border-radius: 10px;
+  line-height: $button-height;
+  box-shadow: $button-shadow;
   border: none;
 
   &:hover {
@@ -25,24 +23,17 @@
 }
 
 .btn-secondary {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 30px;
-  border-radius: 10px;
-  background-color: $secondary-colour;
-  color: white;
-  min-width: 126px;
-  max-width: 126px;
-  max-height: 122px;
+  background: $secondary-colour;
+  min-width: 150px;
+  min-height: $button-height;
   text-align: center;
-  font-weight: 900;
-  font-size: 24px;
-  -webkit-text-stroke: 0.2px black;
-  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.705);
-  cursor: pointer;
+  font-size: $button-font-size;
+  font-weight: bold;
+  border-radius: 10px;
+  line-height: $button-height;
+  box-shadow: $button-shadow;
   border: none;
-
+  
   &:hover {
     background-color: #fff132;
   }
