--- a/src/containers/Landing/Landing.scss
+++ b/src/containers/Landing/Landing.scss
@@ -1,5 +1,3 @@
-@use "../../assets/styles/buttons" as *;
-
 .container {
   .landing-container {
     // border: 10px solid red;
@@ -19,6 +17,8 @@
     h3 {
       width: 70%;
       text-align: center;
+      margin-top: 0px;
+      margin-bottom: 30px;
     }
 
     .btn-primary {
