--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -1,33 +1,48 @@
-@media screen and (min-device-width: 375px) and (max-device-width: 812px) {
-  .form {
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  height: 100vh;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  padding: 10px;
+  // margin: 20px;
+  border-radius: 20px;
+  background-color: #cdefd1;
+  height: 100vh;
+  textarea {
+    resize: none;
+  }
+
+  @media (max-width: 767px) {
+    border: 2px;
+  }
+  @media (max-width: 400px) {
+    border: 2px;
+    width: 90vw;
+  }
+
+  & > * {
+    margin: 2px;
+    border-radius: 10px;
+    padding: 10px;
+    border: none;
+  }
+
+  &__input {
+    border-radius: 10px;
+    padding: 10px;
+    border: none;
+  }
+
+  &__middle {
     display: flex;
     flex-direction: column;
+    border-radius: 10px;
     padding: 10px;
-    margin: 20px;
-    border-radius: 20px;
-    background-color: #cdefd1;
-
-    & > * {
-      margin: 2px;
-      border-radius: 10px;
-      padding: 10px;
-      border: none;
-    }
-
-    &__input {
-      border-radius: 10px;
-      padding: 10px;
-      border: none;
-    }
-
-    &__middle {
-      display: flex;
-      flex-direction: column;
-      border-radius: 10px;
-      padding: 10px;
-      border: none;
-    }
+    border: none;
   }
-}
-@media screen {
 }
