Temporary checkin for pull/merge resolution

--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,5 @@
-$primary-colour: #109e48;
-$secondary-colour: #ffe07d;
+$primary-colour: #359765;
+$secondary-colour: #E6C653;
 $tertiary-colour: #000000;
 $warning-colour: orange;
 $danger-colour: red;
