landing page updated

--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -1,24 +1,26 @@
 @use "variables" as *;
 
 $button-height: 70px;
-$button-font-size: 22px;
+$button-font-size: 20px;
 $button-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+$button-radius: 50px;
 
 .btn-primary {
   background: $primary-colour;
   min-width: 150px;
   min-height: $button-height;
   text-align: center;
-  color: white;
+  color: $text-primary;
   font-size: $button-font-size;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: $button-radius;
   line-height: $button-height;
   box-shadow: $button-shadow;
   border: none;
+  letter-spacing: 2px;
 
   &:hover {
-    background-color: rgb(91, 224, 91);
+    background-color: darken($primary-colour, 10%);
   }
 }
 
@@ -29,7 +31,7 @@ $button-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   text-align: center;
   font-size: $button-font-size;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: $button-radius;
   line-height: $button-height;
   box-shadow: $button-shadow;
   border: none;
@@ -46,5 +48,11 @@ $button-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 
   &:hover {
     background-color: $primary-colour;
+  }
+}
+
+button, a {
+  &:hover {
+    cursor: pointer;
   }
 }
