--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,5 +1,7 @@
-$primary-colour: #359765;
+$primary-colour: #008379;
 $secondary-colour: #E6C653;
 $tertiary-colour: #000000;
 $warning-colour: orange;
 $danger-colour: red;
+
+$text-primary: #F0F8F0;
