styling changes to landing and general styles

--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -1,3 +1,10 @@
+.home {
+  &__title {
+    margin: 20px 0px;
+    text-align: center;
+  }
+}
+
 @media screen and (min-width: 375px) {
   .core-buttons {
     .btn-primary {
