--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -5,19 +5,23 @@ $button-font-size: 20px;
 $button-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 $button-radius: 50px;
 
-.btn-primary {
-  background: $primary-colour;
+button {
+  letter-spacing: 2px;
+  font-weight: bold;
   min-width: 150px;
   min-height: $button-height;
   text-align: center;
-  color: $text-primary;
   font-size: $button-font-size;
-  font-weight: bold;
   border-radius: $button-radius;
   line-height: $button-height;
   box-shadow: $button-shadow;
   border: none;
-  letter-spacing: 2px;
+}
+
+
+.btn-primary {
+  background: $primary-colour;
+  color: $text-primary;
 
   &:hover {
     background-color: darken($primary-colour, 10%);
@@ -26,15 +30,6 @@ $button-radius: 50px;
 
 .btn-secondary {
   background: $secondary-colour;
-  min-width: 150px;
-  min-height: $button-height;
-  text-align: center;
-  font-size: $button-font-size;
-  font-weight: bold;
-  border-radius: $button-radius;
-  line-height: $button-height;
-  box-shadow: $button-shadow;
-  border: none;
   
   &:hover {
     background-color: #fff132;
@@ -50,6 +45,7 @@ $button-radius: 50px;
     background-color: $primary-colour;
   }
 }
+
 
 button, a {
   &:hover {
