--- a/src/assets/styles/_typography.scss
+++ b/src/assets/styles/_typography.scss
@@ -1,9 +1,15 @@
 // BrandonGrot seemed incorrect?
 // @import url(//db.onlinewebfonts.com/c/6dd2f2510b4a00a5461b2455928209c2?family=BrandonGrotW01-Light);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400&display=swap');
 
 // imported via index.html
-$body-font: "Montserrat", "sans-serif";
+$body-font: "Poppins", "sans-serif";
 $title-font: "Cinzel", "serif";
+
+$font-XL: 40px;
+$font-L: 32px;
+$font-M: 24px;
+$font-S: 14px;
 
 * {
     font-family: $body-font;
@@ -15,4 +21,17 @@ h1, h2, h3, h4, h5 {
 
 h1 {
     margin: 10px 0px;
+    font-size: $font-XL;
+}
+
+h2 {
+    font-size: $font-L;
+}
+
+h3 {
+    font-size: $font-M;
+}
+
+p {
+    font-size: $font-S;
 }
