--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -1,3 +1,5 @@
+@use "../../assets/styles/typography" as *;
+
 .container {
   display: flex;
   flex-direction: column;
@@ -16,10 +18,7 @@
   textarea {
     resize: none;
   }
-<<<<<<< HEAD
-=======
 
->>>>>>> f70e4af5932b94354bee14bd3ebed5b0b0253408
   @media (max-width: 767px) {
     border: 2px;
   }
@@ -27,29 +26,18 @@
     border: 2px;
     width: 90vw;
   }
-<<<<<<< HEAD
-=======
 
->>>>>>> f70e4af5932b94354bee14bd3ebed5b0b0253408
   & > * {
     margin: 2px;
     border-radius: 10px;
     padding: 10px;
     border: none;
   }
-<<<<<<< HEAD
-=======
-
->>>>>>> f70e4af5932b94354bee14bd3ebed5b0b0253408
   &__input {
     border-radius: 10px;
     padding: 10px;
     border: none;
   }
-<<<<<<< HEAD
-=======
-
->>>>>>> f70e4af5932b94354bee14bd3ebed5b0b0253408
   &__middle {
     display: flex;
     flex-direction: column;
