importing more styles

--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -1,5 +1,5 @@
 @use "../../assets/styles/typography" as *;
-
+@use "../../assets/styles/buttons" as *;
 .container {
   display: flex;
   flex-direction: column;
