--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,38 @@
-.App {
-  margin: 1rem auto;
-  max-width: 1000px;
-  padding: 1rem;
+* {
+  font-family: "Montserrat", sans-serif;
 }
-.helpButton {
-  border: none;
-  font-size: 30px;
-  position: absolute;
-  right: 10px;
-  top: 0;
+
+.title {
+  font-family: "Cinzel", "serif";
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+}
+.container .core-buttons {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  gap: 10px;
+}
+.container img {
+  height: 560px;
+  width: 100%;
+  border-radius: 14px;
+  object-fit: cover;
+}
+.container .preview-image {
+  height: 300px;
+  width: 300px;
+  border-radius: 16px;
+  margin-top: 20px;
+}
+
+.hidden {
+  display: none !important;
 }
