--- a/src/App.scss
+++ b/src/App.scss
@@ -21,12 +21,12 @@
     gap: 10px;
   }
 
-  img {
-    height: 560px;
-    width: 100%;
-    border-radius: 14px;
-    object-fit: cover;
-  }
+  // img {
+  //   height: 560px;
+  //   width: 100%;
+  //   border-radius: 14px;
+  //   object-fit: cover;
+  // }
 
   .preview-image {
     height: 300px;
@@ -35,7 +35,6 @@
     margin-top: 20px;
   }
 }
-
 
 .hidden {
   display: none !important;
