--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -1,5 +1,9 @@
-@use "../../assets/styles/typography" as *;
-@use "../../assets/styles/buttons" as *;
+// @use "../../assets/styles/typography" as *;
+// @use "../../assets/styles/buttons" as *;
+// @use "../../assets/styles/forms" as *;
+// @use "../../assets/styles/variables" as *;
+// @use "../../assets/styles/main" as *;
+
 .container {
   display: flex;
   flex-direction: column;
