--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -3,6 +3,12 @@
     margin: 20px 0px;
     text-align: center;
   }
+
+  &__core-buttons {
+    width: 300px;
+    margin: auto;
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 375px) {
