--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -16,16 +16,16 @@
     text-align: center;
   }
 
-  &__container {
-   
-  }
+  // &__container {
+
+  // }
 
   &__text {
     max-height: 300px;
     overflow-y: auto;
     p {
       text-align: center;
-      font-weight: 500!important;
+      font-weight: 500 !important;
     }
   }
 
@@ -63,7 +63,7 @@
     box-shadow: 1px 1px 1px #0000003a;
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.562);
-    
+
     min-width: 0px;
     min-height: 0px;
     width: 40px;
@@ -71,7 +71,6 @@
     text-align: center;
     line-height: 25px;
   }
-
 
   &__dismiss-btn {
     width: 220px;
