--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -17,7 +17,6 @@
   }
 
   &__container {
-   
   }
 
   &__text {
@@ -25,7 +24,7 @@
     overflow-y: auto;
     p {
       text-align: center;
-      font-weight: 500!important;
+      font-weight: 500 !important;
     }
   }
 
@@ -63,7 +62,7 @@
     box-shadow: 1px 1px 1px #0000003a;
     cursor: pointer;
     border: 1px solid rgba(0, 0, 0, 0.562);
-    
+
     min-width: 0px;
     min-height: 0px;
     width: 40px;
@@ -71,7 +70,6 @@
     text-align: center;
     line-height: 25px;
   }
-
 
   &__dismiss-btn {
     width: 220px;
@@ -83,5 +81,21 @@
   &__container {
     display: flex;
     flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 375px) {
+  .popup {
+    &__modal {
+      margin-left: -38%;
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .popup {
+    &__modal {
+      margin-left: -34%;
+    }
   }
 }
