Latest styling changes and fixes

--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -49,7 +49,7 @@ button, label[for="file-upload"], label[for="live-capture"] {
 }
 
 
-button, a {
+button, a, label[for="file-upload"], label[for="live-capture"] {
   &:hover {
     cursor: pointer;
   }
