--- a/src/containers/Details/Details.scss
+++ b/src/containers/Details/Details.scss
@@ -1,3 +1,11 @@
+.details {
+  text-align: center;
+
+  &__title {
+    margin-bottom: 0px;
+  }
+}
+
 .form {
   display: flex;
   flex-direction: column;
@@ -5,38 +13,18 @@
   margin: 20px;
   border-radius: 20px;
   background-color: #cdefd1;
+  width: 400px;
+  max-width: 100%;
 
   & > * {
     margin: 10px;
   }
 
-  &__input--name {
+  &__input {
     border-radius: 10px;
     padding: 10px;
     border: none;
-  }
-
-  &__middle {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-
-    &__input {
-      border-radius: 10px;
-      padding: 10px;
-      width: 120px;
-      border: none;
-    }
-  }
-
-  &__input--comments {
-    border-radius: 10px;
-    padding: 10px;
-    height: 80px;
-    word-wrap: break-word;
-    word-break: break-word;
-    resize: none;
-    border: none;
+    margin: 5px;
   }
 }
 
