--- a/src/Components/InfoModal/InfoModal.scss
+++ b/src/Components/InfoModal/InfoModal.scss
@@ -10,6 +10,12 @@
   display: flex;
   flex-direction: column;
   font-family: $body-font;
+
+  &__socials-container {
+    width: 100px;
+    display: flex;
+  }
+
   &__facebook {
     border-radius: 180%;
     font-size: $font-L;
