--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -7,6 +7,13 @@
   border-radius: 20px;
 }
 
+.locate-button {
+  position: absolute;
+  z-index: 999;
+  right: 20px;
+  bottom: 20px;
+}
+
 .leaflet-popup-content {
   height: 261px;
   width: 221px;
