--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -1,7 +1,25 @@
-$primary-colour: #008379;
-$secondary-colour: #E6C653;
+// $primary-colour: #008379;
+// $secondary-colour: #E6C653;
+// $tertiary-colour: #000000;
+// $warning-colour: orange;
+// $danger-colour: red;
+
+// $text-primary: #F0F8F0;
+
+// tester one:
+$primary-colour: #1e9c4b;
+$secondary-colour: #dfae2b;
 $tertiary-colour: #000000;
 $warning-colour: orange;
 $danger-colour: red;
 
-$text-primary: #F0F8F0;
+$text-primary: #f0f8f0;
+
+// tester two:
+// $primary-colour: #b4b4b4;
+// $secondary-colour: #e6c653;
+// $tertiary-colour: #000000;
+// $warning-colour: orange;
+// $danger-colour: red;
+
+// $text-primary: #000000;
