--- a/src/assets/styles/_buttons.scss
+++ b/src/assets/styles/_buttons.scss
@@ -1,55 +1,142 @@
 @use "variables" as *;
 
-$button-height: 70px;
-$button-font-size: 20px;
-$button-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-$button-radius: 50px;
+// $button-height: 70px;
+// $button-font-size: 20px;
+// $button-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+// $button-radius: 50px;
 
-button, label[for="file-upload"], label[for="live-capture"] {
+$bg-color: #1e9c4b; // font colour after hover
+$bg-color2: #1e9c4b; //nothing so far
+
+$border-color: black; // font color before hover
+$border-width: 2px;
+
+$sqrt3: 1.7321; // Square-root of 3
+$hex-height: 70px; //5rem;;
+$hex-min-width: 170px; //$hex-height * $sqrt3 / 2;
+$hex-distance: (
+  $hex-height / (2 * $sqrt3)
+); // d = h / (2*tan(60°)); with h = the height of the button
+
+$hover-color: $border-color;
+//$hover-color: #D3AC14;
+
+$hover-text: $border-color;
+$hover-text: $bg-color;
+
+*,
+*::before,
+*::after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  transition: 0.25s all 0.02s ease-in-out;
+}
+
+button,
+label[for="file-upload"],
+label[for="live-capture"] {
   letter-spacing: 2px;
   font-weight: bold;
-  min-width: 150px;
-  min-height: $button-height;
-  text-align: center;
-  font-size: $button-font-size;
-  border-radius: $button-radius;
-  line-height: $button-height;
-  box-shadow: $button-shadow;
-  border: none;
+  // min-width: 150px;
+  // min-height: $button-height;
+  // text-align: center;
+  // font-size: $button-font-size;
+  // border-radius: $button-radius;
+  // line-height: $button-height;
+  // box-shadow: $button-shadow;
+  // border: none;
+  // display: inline-block;
+
+  appearance: none;
+  position: relative;
   display: inline-block;
-}
+  min-width: $hex-min-width;
+  height: $hex-height;
+  margin: auto;
+  //padding: 0.5rem #{$hex-distance * 1.5};
+  text-align: center;
+  font-size: 20px;
+  line-height: 70px;
+  vertical-align: middle;
+  color: $border-color;
+  cursor: pointer;
+  border: none;
+  background-color: #1e9c4b; //rgba(0, 0, 0, 0.25);
+  clip-path: polygon(
+    #{$hex-distance} 0,
+    calc(100% - #{$hex-distance}) 0,
+    100% 50%,
+    calc(100% - #{$hex-distance}) 100%,
+    #{$hex-distance} 100%,
+    0 50%
+  );
 
-
-.btn-primary {
-  background: $primary-colour;
-  color: $text-primary;
+  &::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black; //border
+    clip-path: polygon(
+      0 50%,
+      #{$border-width} 50%,
+      calc(#{$hex-distance} + #{$border-width/2}) #{$border-width},
+      calc(100% - #{$hex-distance} - #{$border-width/2}) #{$border-width},
+      calc(100% - #{$border-width}) 50%,
+      calc(100% - #{$hex-distance} - #{$border-width/2})
+        calc(100% - #{$border-width}),
+      calc(#{$hex-distance} + #{$border-width/2}) calc(100% - #{$border-width}),
+      #{$border-width} 50%,
+      0 50%,
+      0 100%,
+      100% 100%,
+      100% 50%,
+      100% 0,
+      0 0
+    );
+  }
 
   &:hover {
-    background-color: darken($primary-colour, 10%);
+    color: $bg-color;
+    background-color: $border-color;
   }
 }
 
-.btn-secondary {
-  background: $secondary-colour;
-  color: #424200;
-  
-  &:hover {
-    background-color: darken($secondary-colour, 10%);
-  }
-}
+// .btn-primary {
+//   background: $primary-colour;
+//   color: $text-primary;
 
-.btn-tertiary {
-  padding: 5px;
-  border: 1px solid $primary-colour;
-  border-radius: 10px;
+//   &:hover {
+//     background-color: darken($primary-colour, 10%);
+//   }
+// }
 
-  &:hover {
-    background-color: $primary-colour;
-  }
-}
+// .btn-secondary {
+//   background: $secondary-colour;
+//   color: #424200;
 
+//   &:hover {
+//     background-color: darken($secondary-colour, 10%);
+//   }
+// }
 
-button, a, label[for="file-upload"], label[for="live-capture"] {
+// .btn-tertiary {
+//   padding: 5px;
+//   border: 1px solid $primary-colour;
+//   border-radius: 10px;
+
+//   &:hover {
+//     background-color: $primary-colour;
+//   }
+// }
+
+button,
+a,
+label[for="file-upload"],
+label[for="live-capture"] {
   &:hover {
     cursor: pointer;
   }
