--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -49,15 +49,15 @@
     padding: 10px;
     border: none;
   }
-  &__users-details {
-    height: 0px; /* we start animation from 0px */
+  // &__users-details {
+  //   height: 0px; /* we start animation from 0px */
 
-    transition: height 200s ease-in; /* transition has to be defined on base state of element */
-    background-color: #f5f5f5;
-  }
-  &__checkbox:checked ~ &__users-details {
-    height: 500px;
-  }
+  //   transition: height 200s ease-in; /* transition has to be defined on base state of element */
+  //   background-color: #f5f5f5;
+  // }
+  // &__checkbox:checked ~ .form__users-details {
+  //   height: 500px;
+  // }
 
   &__middle {
     display: flex;
