--- a/src/containers/Information/Information.scss
+++ b/src/containers/Information/Information.scss
@@ -4,6 +4,15 @@
 // @use "../../assets/styles/variables" as *;
 // @use "../../assets/styles/main" as *;
 
+.show {
+  display: block;
+  transition: 2s;
+}
+.hide {
+  display: none;
+  transition: 2s;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -18,6 +27,7 @@
   // margin: 20px;
   border-radius: 20px;
   background-color: #cdefd1;
+  transition: 2s;
   height: 100vh;
   textarea {
     resize: none;
@@ -41,6 +51,7 @@
     border-radius: 10px;
     padding: 10px;
     border: none;
+    transition: 0.5s;
   }
   &__middle {
     display: flex;
