--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -8,7 +8,7 @@
 
 // tester one:
 $primary-colour: #1e9c4b;
-$secondary-colour: #dfae2b;
+$secondary-colour: #e6c653; //#dfae2b;
 $tertiary-colour: #000000;
 $warning-colour: orange;
 $danger-colour: red;
