Added manifest.json etc

--- a/src/containers/Home/Home.scss
+++ b/src/containers/Home/Home.scss
@@ -11,6 +11,13 @@
   }
 }
 
+.add-button {
+  position: absolute;
+  top: 1px;
+  right: 1px;
+  width: 300px;
+}
+
 @media screen and (min-width: 375px) {
   .core-buttons {
     .btn-primary {
