--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -1,40 +1,66 @@
 @use "../../assets/styles/variables" as *;
 @use "../../assets/styles/buttons" as *;
-
 .search-input {
-  display: flex;
-  flex-direction: column;
   background-color: white;
   padding: 0;
   margin: 0;
-
+  height: 35px;
+  width: 200px;
   & div {
-    padding: 6px;
+    padding: 3px;
+  }
+  form {
+    border: solid 1px black;
+    border-radius: 3px;
+    .active.open {
+      background-color: white;
+    }
+  }
+  a {
+    text-decoration: none;
+    font-size: 1.4rem;
+    margin: 5px;
+  }
+  .glass {
+    border: solid 1px black;
+    margin: 7px 5px 0px 5px;
+    border: none;
+  }
+  input {
+    padding: 0;
   }
 }
-
-.search-reset {
-  margin: 10px;
+.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
+  border: solid 1px black;
+  background-clip: padding-box;
 }
-
-// .geosearch .leaflet-touch .leaflet-control-layers,
-// .leaflet-touch .leaflet-bar {
-//   border: solid 2px fuchsia;
-// }
-
+.leaflet-bar a, .leaflet-bar a:hover {
+  border-bottom: solid 1px black;
+}
+.results.active {
+  background-color: white;
+}
+.leaflet-bar {
+  position: absolute;
+  top: 70px;
+}
+.search-reset {
+  position: absolute;
+  z-index: 900;
+  right: -3px;
+  bottom: -3px;
+}
 .leaflet-container {
   height: 80vh;
   width: 90vw;
   border-radius: 20px;
 }
-
 .locate-button {
   position: absolute;
   z-index: 999;
   right: 20px;
   bottom: 20px;
 }
-
 .leaflet-popup-content {
   height: 261px;
   width: 221px;
@@ -42,26 +68,21 @@
   flex-direction: column;
   align-items: center;
 }
-
 .element.style {
   width: 221px;
 }
-
 .leaflet-popup-content button {
   width: 90%;
   height: 10%;
 }
-
 .pendingInfo {
   color: $tertiary-colour;
   background-color: $secondary-colour;
 }
-
 .moreInfo {
   color: white;
   background-color: $primary-colour;
 }
-
 .leaflet-popup-content img {
   width: 90%;
   height: 90%;
