--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -5,7 +5,7 @@
   padding: 0;
   margin: 0;
   height: 35px;
-  width: 200px;
+  width: 90%;
   & div {
     padding: 3px;
   }
@@ -25,6 +25,7 @@
     border: solid 1px black;
     margin: 7px 5px 0px 5px;
     border: none;
+    width: 90%;
   }
   input {
     padding: 0;
