applied styling for stepper

--- a/src/containers/Submit/Submit.scss
+++ b/src/containers/Submit/Submit.scss
@@ -1,5 +1,7 @@
 .submit {
-    &__title {
-        margin-bottom: 0px;
-    }
+  &__title {
+    margin-bottom: 0px;
+    margin: 85px 0px;
+    text-align: center;
+  }
 }
