--- a/src/Components/GrandStepper/GrandStepper.scss
+++ b/src/Components/GrandStepper/GrandStepper.scss
@@ -1,18 +1,21 @@
+@use "../../assets/styles/variables" as *;
+@use "../../assets/styles/typography" as *;
 .grand-stepper {
   svg {
     position: absolute;
     z-index: 999;
-
-    // margin-left: auto;
-    // margin-right: auto;
-    // left: 0;
-    // right: 0;
-    // text-align: center;
-
-    width: 70%;
+    width: 80%;
     top: 15%;
     left: 50%;
-
     transform: translate(-50%, -50%);
+    font-family: $body-font;
+    font-size: font-M;
+
+    g > text:nth-of-type(2) {
+      font-size: 0.6rem;
+      text-align: center;
+      margin-left: 5px;
+      margin-right: 5px;
+    }
   }
 }
