--- a/src/Components/GrandStepper/GrandStepper.scss
+++ b/src/Components/GrandStepper/GrandStepper.scss
@@ -1,15 +1,19 @@
 @use "../../assets/styles/variables" as *;
 @use "../../assets/styles/typography" as *;
 .grand-stepper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   svg {
-    position: absolute;
-    z-index: 999;
-    width: 80%;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    //position: absolute;
+    //z-index: 999;
+    width: 60%;
+    max-width: 900px;
+   // top: 15%;
+   // left: 50%;
+    //transform: translate(-50%, -50%);
     font-family: $body-font;
-    font-size: font-M;
 
     g > text:nth-of-type(2) {
       font-size: 0.6rem;
@@ -19,3 +23,10 @@
     }
   }
 }
+
+@media (max-width: 767px) {
+  .grand-stepper {
+    svg { width: 95vw!important; }
+  }
+}
+
