--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -52,8 +52,9 @@
   bottom: -3px;
 }
 .leaflet-container {
-  height: 80vh;
+  height: 70vh;
   width: 90vw;
+  margin: auto;
   border-radius: 20px;
 }
 .locate-button {
