--- a/src/assets/styles/_forms.scss
+++ b/src/assets/styles/_forms.scss
@@ -1,16 +1,16 @@
 .form {
-  display: flex;
-  flex-direction: column;
   padding: 10px;
   margin: 20px;
   border-radius: 20px;
   background-color: #cdefd1;
 }
-.input {
+input {
   border-radius: 10px;
   padding: 10px;
   border: none;
-  margin: 10px;
+  margin: 20px 10px;
+  width: 100%;
+
 }
 
 .input--comments {
