--- a/src/Components/Overlay/Overlay.scss
+++ b/src/Components/Overlay/Overlay.scss
@@ -1,7 +1,31 @@
 .overlay__show-btn {
-        position: absolute;
-    top: 15px;
-    right: 15px;
-    width: 70px;
-    min-width: 0px;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: 70px;
+  min-width: 0px;
+}
+@media (max-width: 320px) {
+  .overlay {
+    &__show-btn {
+      min-height: 5px !important;
+      height: 27px !important;
+      line-height: 30px;
+      font-size: 16px;
+      width: 20px;
+      top: 25px;
+    }
+  }
+}
+@media (max-width: 767px) {
+  .overlay {
+    &__show-btn {
+      min-height: 5px !important;
+      height: 27px !important;
+      line-height: 30px;
+      font-size: 16px;
+      width: 20px;
+      top: 25px;
+    }
+  }
 }
