--- a/src/Components/SubmitModal/SubmitModal.scss
+++ b/src/Components/SubmitModal/SubmitModal.scss
@@ -43,7 +43,7 @@
 
     // transform: translateY(100%);
     transition: transform 0.2s ease;
-    box-shadow: 0 2px 8px 3px #e6c653;
+    box-shadow: 0 2px 8px 3px #111111;
     padding: 30px;
     border-radius: 10px;
     z-index: 999;
