--- a/src/Components/Map/Map.scss
+++ b/src/Components/Map/Map.scss
@@ -1,5 +1,11 @@
 @use "../../assets/styles/variables" as *;
 @use "../../assets/styles/buttons" as *;
+
+.leaflet-top,
+.leaflet-bottom {
+  z-index: 998;
+}
+
 .search-input {
   background-color: white;
   padding: 0;
@@ -31,11 +37,13 @@
     padding: 0;
   }
 }
-.leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
+.leaflet-touch .leaflet-control-layers,
+.leaflet-touch .leaflet-bar {
   border: solid 1px black;
   background-clip: padding-box;
 }
-.leaflet-bar a, .leaflet-bar a:hover {
+.leaflet-bar a,
+.leaflet-bar a:hover {
   border-bottom: solid 1px black;
 }
 .results.active {
