--- a/src/Components/GrandStepper/GrandStepper.scss
+++ b/src/Components/GrandStepper/GrandStepper.scss
@@ -43,6 +43,16 @@
   .grand-stepper {
     svg {
       width: 80vw !important;
+
+      g > circle {
+        display: flex;
+        background-color: red;
+      }
+
+      g > text:nth-of-type(2) {
+        font-size: $font-L;
+        justify-content: center;
+      }
     }
   }
 }
