--- a/src/containers/Confirmation/Confirmation.scss
+++ b/src/containers/Confirmation/Confirmation.scss
@@ -1,16 +1,4 @@
-.container {
-  padding: 10px;
-  border-radius: 20px;
-}
-
-.buttonContainer {
-  margin: auto;
-}
-
-.core-buttons {
-  .btn-primary {
-  }
-
-  .btn-secondary {
-  }
-}
+// .container {
+//   padding: 10px;
+//   border-radius: 20px;
+// }
