--- a/src/containers/Landing/Landing.scss
+++ b/src/containers/Landing/Landing.scss
@@ -1,13 +1,13 @@
 @import "../../assets/styles/variables";
 
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  transition: 0.25s all 0.02s ease-in-out;
-}
+// *,
+// *::before,
+// *::after {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+//   transition: 0.25s all 0.02s ease-in-out;
+// }
 
 .welcome {
   background-position: bottom;
